--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap"
+		rel="stylesheet">
 	<script type="module" defer src="script.js"></script>
 
 	<title>Title</title>
 </head>
 
 <body>
-	<nav>
+	<!---	<nav>
 		<ul id="list"></ul>
-	</nav>
+		</nav>
+			-->
 	<div id="content"></div>
 </body>
 
