--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 		</nav>
 			-->
 	<div id="content"></div>
+	<footer>
+		<div class="footer_content">
+			<div class="email">Mail to:
+				<a class="mail-link" href="saketh.ajit@gmail.com">saketh.ajit@gmail.com</a>
+			</div>
+			<div class="linkedin">Linkedin:
+				<a class="ln-link" href="https://www.linkedin.com/in/saketh-ajit/">saketh-ajit</a>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
