--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<ul id="list"></ul>
 		</nav>
 			-->
+	<div class="header">
+		<div class="header_title">Saketh Ajit</div>
+	</div>
 	<div id="content"></div>
 	<footer>
 		<div class="footer_content">
