--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap"
 		rel="stylesheet">
-	<script type="module" defer src="script.js"></script>
-
-	<title>Title</title>
+	<script type="module" defer src="script.js" />
+	<title>Saketh Ajit</title>
 </head>
 
 <body>
