--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="styles.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap" rel="stylesheet">
-		<script type="module" defer src="script.js"></script>
-		<title>Title</title>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap"
+		rel="stylesheet">
+	<script type="module" defer src="script.js"></script>
+	<title>Saketh_Ajit</title>
+</head>
 
-	<body>
-		<!---	<nav>
+<body>
+	<!---	<nav>
 		<ul id="list"></ul>
 		</nav>
 			-->
-		<div class="header">
-			<div class="header_title">Saketh Ajit</div>
-		</div>
-		<div id="content"></div>
-		<footer>
-			<div class="footer_content">
-				<div class="email">Mail to:
-					<a class="mail-link" href="saketh.ajit@gmail.com">saketh.ajit@gmail.com</a></div>
-				<div class="linkedin">Linkedin:
-					<a class="ln-link" href="https://www.linkedin.com/in/saketh-ajit/">saketh-ajit</a></div>
+	<div class="header">
+		<div class="header_title">Saketh Ajit</div>
+	</div>
+	<div id="content"></div>
+	<footer>
+		<div class="footer_content">
+			<div class="email">Mail to:
+				<a class="mail-link" href="saketh.ajit@gmail.com">saketh.ajit@gmail.com</a>
 			</div>
-		</footer>
-	</body>
+			<div class="linkedin">Linkedin:
+				<a class="ln-link" href="https://www.linkedin.com/in/saketh-ajit/">saketh-ajit</a>
+			</div>
+		</div>
+	</footer>
+</body>
+
 </html>
